[tool.poetry]
name = "sensor-receive-engine"
version = "0.1.0"
description = ""
authors = ["Christian Schrader <christian.s1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
