[tool.poetry]
name = "sensor_receive-engine"
version = "0.1.0"
description = ""
authors = ["Christian Schrader <christian.s1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.4.1"
rpi-rf = "^0.9.7"
ujson = "^5.2.0"
sqlalchemy = "^1.3.16"
psycopg2 = "^2.8.5"
dacite = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
